--- a/views/home.pug
+++ b/views/home.pug
@@ -73,128 +73,81 @@ block content
       //jquery
       script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
       <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+      <link href="../css/select2.min.css" rel="stylesheet">
 
       script.
         $(document).ready(function() {
             $('.js-example-basic-single').select2();
+
         });
 
 
       
       .div
         .container
-
           .row
             br
-            .col-md-1
-            .col-md-10(style='text-align:center')
-              <select multiple="multiple" class="js-example-basic-single" name="state" id="tags" style="width:265px;font-size:20px;" >
-              <option value="1">Option 1</option>
-              <option value="2">Option 2</option>
-              <option value="3">Option 3</option>
-              <option value="4">Option 4</option>
-              <option value="5">Option 5</option>
+            .col-md-10-col-md-offset-1(style='text-align:center')
+              h3 Join
+              p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;') 
+                | Select your favorite subreddits  
+              <select multiple="multiple" class="js-example-basic-single" name="state" id="tags" style="width:265px;font-size:16px;" >
+                <option value='MMM'>3M Company</option>
+                <option value='ABT'>Abbott Laboratories</option>
+                <option value='ABBV'>AbbVie Inc.</option>
+                <option value='ACN'>Accenture plc</option>
+                <option value='ATVI'>Activision Blizzard</option>
+                <option value='AYI'>Acuity Brands Inc</option>
+                <option value='ADBE'>Adobe Systems Inc</option>
+                <option value='AMD'>Advanced Micro Devices Inc</option>
+                <option value='AAP'>Advance Auto Parts</option>
+                <option value='AES'>AES Corp</option>
+                <option value='AET'>Aetna Inc</option>
+                <option value='AMG'>Affiliated Managers Group Inc</option>
+                <option value='AFL'>AFLAC Inc</option>
+                <option value='A'>Agilent Technologies Inc</option>
+                <option value='APD'>Air Products & Chemicals Inc</option>
+                <option value='AKAM'>Akamai Technologies Inc</option>
+                <option value='ALK'>Alaska Air Group Inc</option>
+                <option value='ALB'>Albemarle Corp</option>
+                <option value='ARE'>Alexandria Real Estate Equities Inc</option>
+                <option value='ALXN'>Alexion Pharmaceuticals</option>
+                <option value='ALGN'>Align Technology</option>
+                <option value='ALLE'>Allegion</option>
+                <option value='AGN'>Allergan, Plc</option>
+                <option value='ADS'>Alliance Data Systems</option>
+                <option value='LNT'>Alliant Energy Corp</option>
+                <option value='ALL'>Allstate Corp</option>
+                <option value='GOOGL'>Alphabet Inc Class A</option>
+                <option value='GOOG'>Alphabet Inc Class C</option>
+                <option value='MO'>Altria Group Inc</option>
+                <option value='AMZN'>Amazon.com Inc</option>
+                <option value='AEE'>Ameren Corp</option>
+                <option value='AAL'>American Airlines Group</option>
               </select>
+
+              p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;') 
+                <br>
+                | Select your delivery frequency  
+              <select name="state" id="tags" style="width:265px;font-size:16px;padding-top:10px;padding-bottom:10px;" >
+              <option value="1">Daily</option>
+              <option value="2">Weekly</option>
+              <option value="3">Monthly</option>
+              </select>
+              p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;') 
+                <br>
+                | Select your delivery frequency    
               
-              p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;')
-                | Find-me contains 
-                span direct contact information, 
-                | 
-                span estimated impressions, 
-                | and 
-                span pricing 
-                | for content creators actively seeking advertisers and sponsorship opportunities.
-                br
-
-                br
-              p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;')
-                | Our database will save you time searching for content creators to sponsor. We do the leg work so you can simply filter, contact, and advertise.
-                br
-                br
-              p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;')
-                | For 
-                span $9/month 
-                | you'll gain access to our continuously updated site, connecting you to 
-                span 125 million
-                |  potential impressions and growing.
-              br
-              //#signup_button.btn.btn-md.btn-hover.btn-default(onclick="location.href='/signup'") Get access
-            .col-md-2    
-
-        //(style="border-top: 2px solid #21ce99;")  
-        //.div(style="background-color:#555a69")
-      hr  
-      .div
-        .container(style='text-align:center')
-          h2 Get access to the Find-me database
-          .row
-            .col-md-1
-            .col-md-5(style='text-align:center') 
-              br
-              p.paragraph(style='font-size:22px;line-height:1.5;color:#333;text-align:center;font-weight:bold') Key information saves you time
-              p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;text-align:left;padding-left:60px')
-                span ✔ 
-                | Direct contact information
-                br
-                span ✔ 
-                | Audience size
-                br
-                span ✔ 
-                | Category
-                br
-                span ✔ 
-                |Pricing
-            .col-md-5(style='text-align:center')
-              br
-              p.paragraph(style='font-size:22px;line-height:1.5;color:#333;text-align:center;font-weight:bold') 
-               | Simple, risk free pricing 
-               i.em.em-money_with_wings
-               i.em.em-moneybag
-   
-              p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;text-align:left;padding-left:60px')
-                span ✔ 
-                | $9/month
-                br
-                span ✔ 
-                | 10-day money back guarantee
-                br
-                span ✔   
-                | Free to cancel any time
-                br
-                span ✔   
-                | New creators added monthly
-          br      
-          #signup_button2.btn.btn-md.btn-hover.btn-default(onclick="location.href='/signup'") Sign up
-        br
-        br 
-        hr
-        br
-        br  
+              <input style="text-align:center;width:220px !important;display:inline;" type="text" min="0" name="g1" id="g1" class="form-control" >
             
-        #blurb.container(style="width:80%;text-align:center")
-          //.col-md-2
-          //.col-md-8
-          h2 Want to sample our database? 
-          .col-md-2
-          .col-md-8
-            p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;') Join our email list receive information about one content creator from our paid database each week, for free! 
-            // Begin MailChimp Signup Form
-            link(href='//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css', rel='stylesheet', type='text/css')
-            style(type='text/css').
-              #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-              /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-              We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-            #mc_embed_signup
-              form#mc-embedded-subscribe-form.validate(action='//datadriventhoughts.us13.list-manage.com/subscribe/post?u=262c11ce96e8bc9ddb6d07ea8&id=968245194c', method='post', name='mc-embedded-subscribe-form', target='_blank', novalidate='')
-                #mc_embed_signup_scroll
-                  //label(for='mce-EMAIL', style='display:block') Subscribe to our mailing list
-                  input#mce-EMAIL.email(type='email', value='', name='EMAIL', placeholder='email address -- we never spam', required='')
-                  // real people should not fill this in and expect good things - do not remove this or risk form bot signups
-                  div(style='position: absolute; left: -5000px;', aria-hidden='true')
-                    input(type='text', name='b_262c11ce96e8bc9ddb6d07ea8_968245194c', tabindex='-1', value='')
-                .clear
-                  input#mc-embedded-subscribe.button(type='submit', value='Subscribe', name='subscribe')
+              <br>
+              <br>
+
+              #signup_button2.btn.btn-md.btn-hover.btn-default(onclick='login()') Sign up
+
+              
+            
+ 
 
           // End mc_embed_signup  
       //.background_image(style='background-image: url(/800_600_background.png);height:100%;background-repeat: no-repeat;padding-top:-100px;background-size:100%')  
