--- a/views/home.pug
+++ b/views/home.pug
@@ -138,7 +138,7 @@ block content
                 <br>
                 | Select your delivery frequency    
               
-              <input style="text-align:center;width:220px !important;display:inline;" type="text" min="0" name="g1" id="g1" class="form-control" >
+              <input style="text-align:center;width:265px !important;display:inline;padding-left:5px;border-radius:4px;" type="text" min="0" name="g1" id="g1" class="form-control" >
             
               <br>
               <br>
