--- a/views/home.pug
+++ b/views/home.pug
@@ -129,7 +129,7 @@ block content
               p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;') 
                 <br>
                 | Select your delivery frequency  
-              <select name="state" id="tags" style="width:265px;font-size:16px;padding-top:10px;padding-bottom:10px;" >
+              <select name="state" id="tags" style="width:265px;font-size:16px;padding-top:10px;padding-bottom:10px;height:43px;border-radius:4px !important;line-height:1.7 !important;box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;border: 1px solid #ccc !important;padding-left:5px;font-family: Avenir !important;" >
               <option value="1">Daily</option>
               <option value="2">Weekly</option>
               <option value="3">Monthly</option>
@@ -138,7 +138,7 @@ block content
                 <br>
                 | Select your delivery frequency    
               
-              <input style="text-align:center;width:265px !important;display:inline;padding-left:5px;border-radius:4px;" type="text" min="0" name="g1" id="g1" class="form-control" >
+              <input style="text-align:center;width:265px !important;display:inline;padding-left:5px;margin-left:5px;border-radius:4px;height:43px" type="text" min="0" name="g1" id="g1" class="form-control" >
             
               <br>
               <br>
