--- a/views/home.pug
+++ b/views/home.pug
@@ -10,14 +10,65 @@ block content
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
       //moment
       script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js')
-
-      
-      link(rel='stylesheet', type='text/css', href='https://cdn.datatables.net/v/bs-3.3.7/jq-2.2.4/dt-1.10.15/b-1.3.1/b-colvis-1.3.1/cr-1.3.3/fc-3.2.2/fh-3.1.2/r-2.1.1/rg-1.0.0/rr-1.2.0/sc-1.4.2/datatables.min.css')      
-      //dataTables css
-
-      
-
+      //select2
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+      <link href="../css/select2.min.css" rel="stylesheet">
       script.
+        $(document).ready(function() {
+          $('.js-example-basic-single_2').select2();
+          
+
+
+        });
+
+        window.onload = function start(){
+          var params_json = document.getElementById("params_json").value;
+          var params_json_1 = JSON.parse(params_json);
+          console.log(params_json_1.user.subreddits);
+          console.log(params_json_1.user.frequency);
+
+          //push weight summary stats to html
+          
+          
+          var frequency = document.getElementById("frequency");
+
+          frequency.value = params_json_1.user.frequency;
+          subreddits_stg = params_json_1.user.subreddits;
+
+          //document.getElementById("frequency").value = params_json_1.user.subreddits;
+
+          $.each(subreddits_stg.split(","), function(i,e){
+              document.getElementById("subreddits").value += e;
+          });
+          }
+
+
+
+      link(rel='stylesheet', type='text/css', href='https://cdn.datatables.net/v/bs-3.3.7/jq-2.2.4/dt-1.10.15/b-1.3.1/b-colvis-1.3.1/cr-1.3.3/fc-3.2.2/fh-3.1.2/r-2.1.1/rg-1.0.0/rr-1.2.0/sc-1.4.2/datatables.min.css')      
+      .div
+        .container
+          .row
+            .col-md-10-col-md-offset-1(style='text-align:center')
+              input(type='hidden', id="params_json", value= JSON.stringify(locals))
+              h3(style="padding-top:10px;") Welcome
+              p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;padding-top:5px;') 
+                | Your subreddits
+
+              //<select multiple="multiple" class="js-example-basic-single_2" name="subreddits" id="subreddits" style="width:265px;font-size:16px;" >
+                <option value='MMM'>3M Company</option>
+                </select>
+
+
+              <input style="text-align:center;width:265px !important;display:inline;padding-left:5px;margin-left:5px;border-radius:4px;height:43px" type='text', name='subreddits', id='subreddits', autofocus, required class="form-control" >
+              <br>
+              <br>
+              p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;padding-top:5px;') 
+                | Your frequency
+              <input style="text-align:center;width:265px !important;display:inline;padding-left:5px;margin-left:5px;border-radius:4px;height:43px" type='text', name='frequency', id='frequency', autofocus, required class="form-control" >
+   
+
+
+
 
 
 
@@ -62,7 +113,7 @@ block content
                 input(type='hidden', name='_csrf', value=_csrf)
                 p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;padding-top:5px;') 
                   | Select your favorite subreddits  
-                <select multiple="multiple" class="js-example-basic-single" name="state" id="subreddits" style="width:265px;font-size:16px;" >
+                <select multiple="multiple" class="js-example-basic-single" name="subreddits" id="subreddits" style="width:265px;font-size:16px;" >
                   <option value='MMM'>3M Company</option>
                   <option value='ABT'>Abbott Laboratories</option>
                   <option value='ABBV'>AbbVie Inc.</option>
@@ -100,10 +151,10 @@ block content
                 p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;') 
                   <br>
                   | Select your delivery frequency  
-                <select name="state" id="frequency" style="width:265px;font-size:16px;padding-top:10px;padding-bottom:10px;height:43px;border-radius:4px !important;line-height:1.7 !important;box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;border: 1px solid #ccc !important;padding-left:5px;font-family: Avenir !important;" >
-                <option value="1">Daily</option>
-                <option value="2">Weekly</option>
-                <option value="3">Monthly</option>
+                <select name="frequency" id="frequency" style="width:265px;font-size:16px;padding-top:10px;padding-bottom:10px;height:43px;border-radius:4px !important;line-height:1.7 !important;box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;border: 1px solid #ccc !important;padding-left:5px;font-family: Avenir !important;" >
+                <option value="Daily">Daily</option>
+                <option value="Weekly">Weekly</option>
+                <option value="Monthly">Monthly</option>
                 </select>
                 p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;') 
                   <br>
