--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -6,19 +6,19 @@ footer
     .container
       .row
         .col-md-2(style='text-align:center')
-          h3(style='color:#fff !important;font-size:25px !important;margin-top:35px !important;') Find-me
+          h3(style='color:#fff !important;font-size:25px !important;margin-top:35px !important;') Storyrake
         .col-md-5
         .col-md-5(style='color:#fff !important;text-align:center;')
-          .p(style='color:#fff !important;margin-top:15px !important;font-size:130% !important;')
+          .p(style='color:#fff !important;margin-top:26px !important;font-size:130% !important;')
           | Questions? 
           | Contact: 
           a(style='font-size:110%;')(href='mailto:hi@find-me.co') hi@find-me.co
           hr(style='height:1px; visibility:hidden;margin-top:0px;margin-bottom:0px')
-          a(href='/terms')   Terms 
-          | | 
-          a(href='/records') Creator? Submit your info 
-          | | 
-          a(href='/blog') Blog
+          //a(href='/terms')   Terms 
+          //| | 
+          //a(href='/records') Creator? Submit your info 
+          //| | 
+          //a(href='/blog') Blog
         br
         br  
         hr(style='height:2px; visibility:hidden;margin-top:4px;margin-bottom:0px')
