--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -9,14 +9,14 @@
           span.icon-bar
           span.icon-bar
         a.navbar-brand(href='/')
-          | Find-me
+          | Storyrake
       .collapse.navbar-collapse
         ul.nav.navbar-nav.navbar-right
-          li(class=(title == 'Sponsor') ? 'active' : undefined)
+          //li(class=(title == 'Sponsor') ? 'active' : undefined)
             a(href='/records') Creator? Get sponsored
-          li(class=(title == 'Blog') ? 'active' : undefined)
+          //li(class=(title == 'Blog') ? 'active' : undefined)
             a(href='/blog') Blog
-          li(class=(title == 'Sign up') ? 'active' : undefined)
+          //li(class=(title == 'Sign up') ? 'active' : undefined)
             a(href='/signup') Sign up  
           li(class=(title == 'Log in') ? 'active' : undefined)
             a(href='/login') Log in
@@ -32,7 +32,7 @@
           span.icon-bar
           span.icon-bar
         a.navbar-brand(href='/')
-          | Find-me
+          | Storyrake
       .collapse.navbar-collapse
         ul.nav.navbar-nav.navbar-right
           //li(class=(title == 'Sponsor') ? 'active' : undefined)
@@ -44,7 +44,7 @@
               span= user.profile.name || user.email || user.id
               i.caret
             ul.dropdown-menu
-              li
+              //li
                 a(href='/account') My Account
               li.divider
               li
