--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,18 +1,18 @@
 footer
   br
   br  
-  .div(style='background-color:#555a69;')
+  .div(style='background-color:#a9a5a5;')
     hr(style='height:2px; visibility:hidden;margin-top:6px;margin-bottom:0px')
     .container
       .row
         .col-md-2(style='text-align:center')
-          h3(style='color:#fff !important;font-size:25px !important;margin-top:35px !important;') Storyrake
+          h3(style='color:#fff !important;font-size:25px !important;margin-top:35px !important;font-weight:normal !important') Storyrake
         .col-md-5
         .col-md-5(style='color:#fff !important;text-align:center;')
           .p(style='color:#fff !important;margin-top:26px !important;font-size:130% !important;')
           | Questions? 
           | Contact: 
-          a(style='font-size:110%;')(href='mailto:hi@find-me.co') hi@find-me.co
+          a(style='font-size:105%;color:#105fd8 !important;')(href='mailto:hi@find-me.co') hi@find-me.co
           hr(style='height:1px; visibility:hidden;margin-top:0px;margin-bottom:0px')
           //a(href='/terms')   Terms 
           //| | 
