--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -15,46 +15,27 @@ block content
     }
     });
     }
-  #welcome.container
-    br
-    h3 Welcome Back
-    br
-    #signup.col-sm-6.col-sm-offset-3    
+  br
+
+  .col-md-6.col-md-offset-3(style='text-align:center;background-color:#f5f5f5;border-radius:15px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.11), 0 6px 20px 0 rgba(0, 0, 0, 0.1);')
+    h3(style="padding-top:20px;font-weight:500 !important;color:#4f4c52 !important;padding-bottom:10px !important;padding-left:3px;") 
+      | Welcome back
+    #signup.col-md-6.col-sm-offset-3    
       form.form-horizontal(id="login_form", method='POST')
-        input(type='hidden', name='_csrf', value=_csrf)
-        .form-group
-          label.col-sm-3.control-label(for='email') 
-          input.form-control(type='email', name='email', id='email', placeholder='Email', autofocus, required)
-        .form-group
-          label.col-sm-3.control-label(for='password') 
-          input.form-control(type='password', name='password', id='password', placeholder='Password', required)
-        .form-group
-          #signup_button.btn.btn-md.btn-hover.btn-default(onclick='login()') Login
-            //requires nodemailer
-            //a.btn.btn-link(href='/forgot') Forgot your password?
-        //.form-group
-          .col-sm-offset-3.col-sm-7
-            hr
-        //.form-group
-          .col-sm-offset-3.col-sm-7
-            a.btn.btn-block.btn-facebook.btn-social(href='/auth/facebook')
-              i.fa.fa-facebook
-              | Sign in with Facebook
-            a.btn.btn-block.btn-twitter.btn-social(href='/auth/twitter')
-              i.fa.fa-twitter
-              | Sign in with Twitter
-            a.btn.btn-block.btn-google.btn-social(href='/auth/google')
-              i.fa.fa-google-plus
-              | Sign in with Google
-            a.btn.btn-block.btn-github.btn-social(href='/auth/github')
-              i.fa.fa-github
-              | Sign in with GitHub
-            a.btn.btn-block.btn-linkedin.btn-social(href='/auth/linkedin')
-              i.fa.fa-linkedin
-              | Sign in with LinkedIn
-            a.btn.btn-block.btn-instagram.btn-social(href='/auth/instagram')
-              i.fa.fa-instagram
-              | Sign in with Instagram
+        input(type='hidden', name='_csrf', value=_csrf)  
+        input.form-control(type='email', name='email', id='email', placeholder='Email', autofocus, required, style="text-align:center;width:200px !important;display:inline;border-radius:4px;height:43px;margin-left:0px")
+        br
+        br
+        input.form-control(type='password', name='password', id='password', placeholder='Password', required, style="text-align:center;width:200px !important;display:inline;border-radius:4px;height:43px;padding-right:10px")
+        br
+        br
+        #signup_button2.btn.btn-md.btn-hover.btn-default(onclick='login()' style="background-color:#341f97 !important;") 
+          | Login
+        <br>
+        <br>
+
+
+ 
       // Global Site Tag (gtag.js) - Google Analytics
       script(async='', src='https://www.googletagmanager.com/gtag/js?id=UA-105691246-1')
       script.
