--- a/views/home.pug
+++ b/views/home.pug
@@ -78,7 +78,7 @@ block content
 
 
 
-      link(rel='stylesheet', type='text/css', href='https://cdn.datatables.net/v/bs-3.3.7/jq-2.2.4/dt-1.10.15/b-1.3.1/b-colvis-1.3.1/cr-1.3.3/fc-3.2.2/fh-3.1.2/r-2.1.1/rg-1.0.0/rr-1.2.0/sc-1.4.2/datatables.min.css')      
+      //link(rel='stylesheet', type='text/css', href='https://cdn.datatables.net/v/bs-3.3.7/jq-2.2.4/dt-1.10.15/b-1.3.1/b-colvis-1.3.1/cr-1.3.3/fc-3.2.2/fh-3.1.2/r-2.1.1/rg-1.0.0/rr-1.2.0/sc-1.4.2/datatables.min.css')      
       .div
         .container
           .row
@@ -86,8 +86,9 @@ block content
               form.form-horizontal(id='update-form', action='/account/profile', method='POST')
                 input(type='hidden', name='_csrf', value=_csrf)
                 input(type='hidden', id="params_json", value= JSON.stringify(locals))
-                h3(style="padding-top:10px;") Welcome
-                p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;padding-top:5px;') 
+                //h3(style="padding-top:10px;") Welcome
+                br
+                p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;padding-top:5px;') 
                   | Your subreddits
 
                 <select multiple="multiple" class="js-example-basic-single_2" name="subreddits" id="subreddits" style="width:265px;font-size:16px;" >
@@ -184,11 +185,12 @@ block content
 
                 <br>
                 <br>
-                p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;padding-top:5px;') 
+                p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;padding-top:5px;') 
                   | Your frequency
                 <select name="frequency" id="frequency" style="width:265px;font-size:16px;padding-top:10px;padding-bottom:10px;height:43px;border-radius:4px !important;line-height:1.7 !important;box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;border: 1px solid #ccc !important;padding-left:5px;font-family: Avenir !important;" >
                 <option value="Daily">Daily</option>
                 <option value="Weekly">Weekly</option>
+                <option value="Weekly">None (unsubscribe from emails)</option>
                 </select>
 
    
@@ -246,12 +248,17 @@ block content
 
       
       .div
-      
-        .col-md-10-col-md-offset-1(style='text-align:center')
-          h3(style="padding-top:10px;") Sign-up
+        br
+        .col-md-6.col-md-offset-3(style='text-align:center;background-color:#f5f5f5;border-radius:15px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.11), 0 6px 20px 0 rgba(0, 0, 0, 0.1);')
+          h3(style="padding-top:10px;font-weight:500 !important;color:#4f4c52 !important;") Join Storyrake
+          
           form.form-horizontal(id='signup-form', action='/signup', method='POST')
+            p.paragraph(style='font-size:22px;line-height:1.5;color:#341f97;padding-top:5px;text-align:center;') 
+              | Enter your email address and favorite subreddits,
+              br
+              | receive a summary email with the top posts
             input(type='hidden', name='_csrf', value=_csrf)
-            p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;padding-top:5px;') 
+            p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;padding-top:5px;') 
               | Select your favorite subreddits  
             <select multiple="multiple" class="js-example-basic-single" name="subreddits" id="subreddits" style="width:265px;font-size:16px;" >
             <option value='funny'>funny</option>
@@ -342,37 +349,39 @@ block content
             <option value='nfl'>nfl</option>                  
             </select>
 
-            p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;') 
+            p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;') 
               <br>
               | Select your delivery frequency  
             <select name="frequency" id="frequency" style="width:265px;font-size:16px;padding-top:10px;padding-bottom:10px;height:43px;border-radius:4px !important;line-height:1.7 !important;box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;border: 1px solid #ccc !important;padding-left:5px;font-family: Avenir !important;" >
             <option value="Daily">Daily</option>
             <option value="Weekly">Weekly</option>
             </select>
-            p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;') 
+            p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;') 
               <br>
               | Enter your email    
             
             <input style="text-align:center;width:265px !important;display:inline;padding-left:5px;margin-left:5px;border-radius:4px;height:43px" type='email', name='email', id='email', placeholder='Email', autofocus, required class="form-control" >
 
-            p.paragraph(style='font-size:22px;line-height:1.5;color:#71828c;') 
+            p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;') 
               <br>
               | Enter your password    
             
             <input style="text-align:center;width:265px !important;display:inline;padding-left:5px;margin-left:5px;border-radius:4px;height:43px" type='password', name='password', id='password', placeholder='Password' class="form-control" >
         
           <br>
-          <br>
+          
 
           #signup_button2.btn.btn-md.btn-hover.btn-default(onclick='signup()') Sign up
-
+          <br>
+          <br>
+          <br>
           
         
 
 
           // End mc_embed_signup  
       //.background_image(style='background-image: url(/800_600_background.png);height:100%;background-repeat: no-repeat;padding-top:-100px;background-size:100%')  
-      //p.paragraph(style='font-size:20px;line-height:1.5;color:#71828c;')
+      //p.paragraph(style='font-size:20px;line-height:1.5;color:#4f4c52;')
         br
         span Creators
         br
