--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -46,6 +46,6 @@
             ul.dropdown-menu
               //li
                 a(href='/account') My Account
-              li.divider
+              //li.divider
               li
                 a(href='/logout') Logout
