--- a/views/home.pug
+++ b/views/home.pug
@@ -249,8 +249,9 @@ block content
       
       .div
         br
-        .col-md-6.col-md-offset-3(style='text-align:center;background-color:#f5f5f5;border-radius:15px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.11), 0 6px 20px 0 rgba(0, 0, 0, 0.1);')
-          h3(style="padding-top:10px;font-weight:500 !important;color:#4f4c52 !important;") Join Storyrake
+        .col-md-6.col-md-offset-3(style='text-align:center;background-color:#f5f5f585;border-radius:15px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.11), 0 6px 20px 0 rgba(0, 0, 0, 0.1);')
+          
+          h3(style="font-weight:500 !important;color:#4f4c52 !important;padding-top:20px !important;") Join Storyrake
           
           form.form-horizontal(id='signup-form', action='/signup', method='POST')
             p.paragraph(style='font-size:22px;line-height:1.5;color:#341f97;padding-top:5px;text-align:center;') 
