added a couple subreddits

--- a/views/home.pug
+++ b/views/home.pug
@@ -177,7 +177,11 @@ block content
                 <option value='StarWars'>StarWars</option>
                 <option value='CrappyDesign'>CrappyDesign</option>
                 <option value='YouShouldKnow'>YouShouldKnow</option>
-                <option value='nfl'>nfl</option>                  
+                <option value='nfl'>nfl</option>   
+                <option value='python'>python</option>                  
+                <option value='financialindependence'>financialindependence</option>
+                <option value='SideProject'>SideProject</option>
+                <option value='Entrepreneur'>Entrepreneur</option>               
                 </select>
 
 
@@ -347,7 +351,12 @@ block content
             <option value='StarWars'>StarWars</option>
             <option value='CrappyDesign'>CrappyDesign</option>
             <option value='YouShouldKnow'>YouShouldKnow</option>
-            <option value='nfl'>nfl</option>                  
+            <option value='nfl'>nfl</option>
+            <option value='python'>python</option>                  
+            <option value='financialindependence'>financialindependence</option>
+            <option value='SideProject'>SideProject</option>
+            <option value='Entrepreneur'>Entrepreneur</option>
+
             </select>
 
             p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;') 
